--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
 .App {
-  text-align: center;
+  margin: 0px;
+  width: 100%;
+  min-height: 100vh;
+  background-color: rgb(0, 0, 0);
+  color: white;
 }
 
-.App-logo {
+/*.App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -35,4 +39,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+}*/
