Particles design implement

--- a/src/Component/HomePage/Home.css
+++ b/src/Component/HomePage/Home.css
@@ -1,3 +1,11 @@
+.writenContent{
+    position: absolute;
+    width: 100%;
+    z-index: 999;
+    top: 0;
+    height: 100%;
+}
+
 .nameHeading{
     display: flex;
     width: 100%;
