--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,13 @@
   min-height: 100vh;
   background-color: rgb(0, 0, 0);
   color: white;
+  transition: 2s;
+}
+
+.day_theme{
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  transition: 2s;
 }
 
 /*.App-logo {
