--- a/src/Component/Contact/Contact.css
+++ b/src/Component/Contact/Contact.css
@@ -20,7 +20,58 @@
     margin-top: 20px !important;
 }
 
+.day_theme .contact .btn{
+color: white !important;
+}
+
+.send_btn{
+    color: white !important;
+}
+
 .backBtnDiv{
     display: flex !important;
     justify-content: center !important;
+}
+
+.other_contact{
+    font-weight: 700;
+    font-size: 24px;
+    font-family: math;
+    text-align: center;
+    margin-bottom: 50px !important;
+}
+
+.other_contact svg{
+    cursor: pointer;
+    padding: 0px 10px;
+    font-size: 29px;
+    transition: 2s;
+}
+
+.other_contact svg:hover{
+    transform: scale(1.2);
+    transition: 1s;
+}
+
+.other_contact .make_line{
+    width: 100%; 
+   text-align: center; 
+   border-bottom: 1px solid rgb(255, 255, 255);
+   line-height: 0.1em;
+   margin: 60px 0 20px; 
+}
+
+.other_contact .make_line>span{
+    background:rgb(0, 0, 0);
+    padding:0 30px; 
+    transition: 2s;
+}
+
+.day_theme .other_contact .make_line{
+    border-bottom: 1px solid rgb(0, 0, 0);
+}
+
+.day_theme .other_contact .make_line>span{
+    background:#fff;
+    transition: 2s;
 }
