--- a/src/Component/AboutPage/About.css
+++ b/src/Component/AboutPage/About.css
@@ -41,6 +41,15 @@ a{
     margin-right: 15px !important;
 }
 
+.profile_pic {
+    width: 150px;
+    height: 150px;
+    border-radius: 100px;
+    background-color: white;
+    border: 2px solid #424242;
+    padding: 2px;
+}
+
 /*  */
 .day_theme .btn{
     color: rgb(0, 0, 0) !important;
